--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,12 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
-
-  repository_dispatch:
-    types:
-      - build
-      - publish
+      - 'master'
 
 jobs:
   build_base:
